[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-assetforge"
version = "0.1.0"
description = "Deterministic utility nodes for ComfyUI asset workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/YOUR_NAME/ComfyUI-AssetForge"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_comfy: requires a running ComfyUI server on http://127.0.0.1:8188",
]

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI AssetForge"
Icon = ""
Tags = ["mask", "image", "asset"]

[tool.setuptools.package-data]
"*" = ["*.*"]
