[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-pixel-assetforge"
version = "0.1.0"
description = "Deterministic pixel-art and sprite utility nodes for ComfyUI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/rook2pawn/PixelAssetForge"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live_comfy: requires a running ComfyUI server on http://127.0.0.1:8188",
]

[tool.comfy]
PublisherId = "rook2pawn"
DisplayName = "ComfyUI PixelAssetForge"
Icon = ""
Tags = ["pixel-art", "sprite", "palette", "mask", "image"]

[tool.setuptools.package-data]
"*" = ["*.*"]
